Made some changes locally

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi! I am Shivam shekhar and this is my first app.
+            <h2>new changes made</h2>
+           
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
