[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,10 +6,14 @@
             <meta name="veiwport" content="width=device-width, initial-scale=1"/>
             <style>
                 .container {
-                    max-width:800px;
-                    margin:0 auto;
-                    color:blue;
+                   
+                    max-width: 800px;
+                    margin: 0 auto;
+                    color: #6e6e9a;
                     font-family: sans-serif;
+                    padding-top: 60px;
+                    padding-right: 20px;
+                    padding-left: 20px;
                 }
             </style>
             </head>
