--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,18 +4,7 @@
             article one|shivam shekhar
             </title>
             <meta name="veiwport" content="width=device-width, initial-scale=1"/>
-            <style>
-                .container {
-                   
-                    max-width: 800px;
-                    margin: 0 auto;
-                    color: #6e6e9a;
-                    font-family: sans-serif;
-                    padding-top: 60px;
-                    padding-right: 20px;
-                    padding-left: 20px;
-                }
-            </style>
+            <link href="/ui/style.css" rel="stylesheet" />
             </head>
         <body>
             <div class="container">
