--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,6 +4,7 @@
             article 3|shivam shekhar
             </title>
             <meta name="veiwport" content="width=device-width, initial-scale=1"/>
+             <link href="/ui/style.css" rel="stylesheet" />
             </head>
         <body>
             <div>
