[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -15,11 +15,11 @@
                     article 3
                 </h3>
                 <div>
-                    sept 5
+                    sept 15,2016
                 </div>
                 <div>
                 <p>
-                    this is the content of my forst article.
+                    this is the content of my third article.
                     this is the content of my forst article.this is the content of my forst article.this is the content of my forst article.this is the content of my forst article.this is the content of my forst article.this is the content of my forst article.this is the content of my forst article.this is the content of my forst article.this is the content of my forst article.this is the content of my forst article.
                     
                 </p>
