--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,9 @@
             <h2>new changes made</h2>
            
         </div>
+        <script>
+            alert('Hi,I\'m Javascript');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
