--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="https://pbs.twimg.com/profile_images/894963329961140224/yOnrdoPG_400x400.jpg" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id='main-text' class="center text-big bold">
             Hi! I am Shivam shekhar and this is my first app.
             <h2>new changes made</h2>
            
