--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="https://pbs.twimg.com/profile_images/894963329961140224/yOnrdoPG_400x400.jpg" class="img-medium"/>
+            <img id='madi' src="https://pbs.twimg.com/profile_images/894963329961140224/yOnrdoPG_400x400.jpg" class="img-medium"/>
         </div>
         <br>
         <div id='main-text' class="center text-big bold">
