--- a/ui/index.html
+++ b/ui/index.html
@@ -4,18 +4,27 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id='madi' src="https://pbs.twimg.com/profile_images/894963329961140224/yOnrdoPG_400x400.jpg" class="img-medium"/>
+        <div class="container">
+            <div class="center">
+                <img id='madi' src="https://pbs.twimg.com/profile_images/894963329961140224/yOnrdoPG_400x400.jpg" class="img-medium"/>
+            </div>
+            <hr/>
+            <br>
+            <h3>Personal</h3>
+            <div>
+               hi my name is shivam.
+            </div>
+            <hr/>
+            <h3>Professio</h3>
+            <div>
+               i am student..
+            </div>
+            <hr/>
+            <h3>Personal</h3>
+            <div class="footer">
+              
+            </div>
         </div>
-        <br>
-        <div id='main-text' class="center text-big bold">
-            Hi! I am Shivam shekhar and this is my first app.
-            <h2>new changes made</h2>
-           
-        </div>
-        <script>
-            alert('Hi,I\'m Javascript');
-        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
