--- a/ui/index.html
+++ b/ui/index.html
@@ -16,12 +16,11 @@
             <hr/>
             <h3>Professio</h3>
             <div>
-               i am student..
+               i am student.
             </div>
             <hr/>
-            
             <div class="footer">
-              
+                 This button <button id="counter">click me! </button>has been clicked <span id="count">0</span> times.
             </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
